src/components/app-header/app-header.module.css
.header {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  justify-items: center;
  align-items: center;
  width: 100%;
  background: #1C1C21;
  border: 2px solid #4C4CFF;
  box-sizing: border-box;
  min-height: 88px;
  box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.04), 0px 16px 24px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
}

.nav {
  display: flex;
}

.button {
  height: 56px;
  border-radius: 40px;
  background: #1C1C21;
  display: flex;
  align-items: center;
  padding: 16px 20px;
  border: 1px dashed #4C4CFF;
  box-sizing: border-box;
  color: #F2F2F3;
  display: flex;
}

